data, db access, services, components

--- a/QuickPollUI/Pages/_Host.cshtml
+++ b/QuickPollUI/Pages/_Host.cshtml
@@ -30,5 +30,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="JS/interop.js"></script>
+
 </body>
 </html>
