--- a/QuickPollUI/_Imports.razor
+++ b/QuickPollUI/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using QuickPollUI
 @using QuickPollUI.Shared
+@using QuickPollUI.Components
+@using QuickPollLibrary.Models
+@using System.Timers
+@using QuickPollLibrary.Services
+@using Microsoft.AspNetCore.SignalR.Client
