--- a/QuickPollUI/Shared/MainLayout.razor
+++ b/QuickPollUI/Shared/MainLayout.razor
@@ -1,18 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>QuickPollUI</PageTitle>
+<PageTitle>HubTest</PageTitle>
 
 <div class="page">
-    <div class="sidebar">
+    
+    <div>
         <NavMenu />
     </div>
 
     <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
