--- a/QuickPollUI/Components/CountDownTimer.razor
+++ b/QuickPollUI/Components/CountDownTimer.razor
@@ -27,7 +27,7 @@ else
 }
 
 @code {
-    [CascadingParameter]
+    [Parameter]
     public PollModel Poll { get; set; }
 
     private Timer _timeLimitTimer = new(1000);
