undo vote feature, tooltip component

--- a/QuickPollUI/Components/CountDownTimer.razor
+++ b/QuickPollUI/Components/CountDownTimer.razor
@@ -30,6 +30,9 @@ else
     [Parameter]
     public PollModel Poll { get; set; }
 
+    [Parameter]
+    public string Position { get; set; } = "absolute";
+
     private Timer _timeLimitTimer = new(1000);
 
     private Timer _startsInTimer = new(1000);
@@ -90,9 +93,10 @@ else
 
 <style>
     .timer {
-        right: 30px;
-        bottom: 0;
-        position: absolute;
+        right:  @(Position == "absolute" ? "30px" : "auto");
+        bottom: @(Position == "absolute" ? "0" : "auto");
+        margin: @(Position == "absolute" ? "0" : "0 auto");
+        position: @(Position);
         justify-content: space-evenly;
         width: 50%;
         display: flex;
