--- a/QuickPollUI/wwwroot/css/site.css
+++ b/QuickPollUI/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background: #57595D;
 }
 
 .invalid {
@@ -52,6 +53,7 @@ html, body {
 .percent-block {
     display: flex;
     justify-content: space-between;
+    padding: 10px 20px;
 }
 
 .answer {
@@ -64,11 +66,6 @@ html, body {
     .answer:hover {
         opacity: 0.6;
     }
-
-span {
-    display: inline-block;
-    padding: 10px 20px;
-}
 
 .percent-even {
     background: rgba(217, 27, 66, 0.3);
