login modal, landing info cards

--- a/QuickPollUI/Components/CreatePollForm.razor
+++ b/QuickPollUI/Components/CreatePollForm.razor
@@ -134,7 +134,7 @@
             { "Copied", false }
         };
 
-        ModalWrapperComponent.ShowModal(mouseArgs, typeof(PollLinkInfo), ParameterArguments);
+        ModalWrapperComponent.ShowModal(mouseArgs, typeof(PollLinkInfo), ParameterArguments, false);
     }
 
     public async Task HandleSubmit()
